# zephyr_alif

./: Jenkinsfile  test_samples.groovy  west.yml
.github/workflows/: scorecards.yml
automation/: Jenkinsfile
boards/common/: alif_flash.board.cmake
cmake/: gcc-m-cpu.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.alif  adc_alif.c
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.dmic_alif  alif_pdm.c  alif_pdm_reg.h
drivers/can/: CMakeLists.txt  Kconfig  can_cast.c
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.alif  clock_control_alif_balletto.c  clock_control_alif_ensemble.c  clock_control_alif_ensemble_e1c.c
drivers/comparator/: CMakeLists.txt  Kconfig  Kconfig.alif_comp  comparator_alif_comp.c
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.alif  counter_alif_utimer.c  counter_dw_rtc.c  counter_dw_timer.c
drivers/crc/: CMakeLists.txt  alif_crc.c  alif_crc_reg.h  crc_handlers.c
drivers/dac/: CMakeLists.txt  Kconfig  dac_alif.c
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.ili9xxx  Kconfig.mw405  display_cdc200.c  display_ili9xxx.c  display_ili9xxx.h  display_mw405.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.dma_alif_event_router  Kconfig.dma_pl330  dma_alif_event_router.c  dma_pl330.c  dma_pl330.h
drivers/entropy/: CMakeLists.txt  Kconfig
drivers/ethernet/: CMakeLists.txt  Kconfig.dwmac  eth_dwmac.c  eth_dwmac_alif_ensemble.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.alif  flash_mram_alif.c  flash_mx66uw.c  flash_mx66uw.h  flash_ospi_is25wx.c  flash_ospi_is25wx.h
drivers/gpio/: gpio_dw.c  gpio_dw.h
drivers/hwinfo/: CMakeLists.txt  Kconfig  hwinfo_alif.c
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.gpio_i2c_mux  gpio_i2c_mux.c  i2c_dw.c  i2c_dw.h
drivers/i2s/: CMakeLists.txt  Kconfig.dw  alif_i2s_clk_config.h  i2s_dw.c  i2s_dw.h
drivers/i3c/: i3c_common.c  i3c_dw.c  i3c_shell.c
drivers/ieee802154/: CMakeLists.txt  Kconfig  ieee802154_alif.c  ieee802154_alif.h
drivers/ipm/: CMakeLists.txt  Kconfig  ipm_alif_hwsem.c  ipm_arm_mhuv2.c
drivers/mdio/: CMakeLists.txt  Kconfig  Kconfig.dwmac  mdio_dwmac.c
drivers/memc/: CMakeLists.txt  Kconfig  Kconfig.alif  memc_alif_opsi_aps512xxn.c
drivers/mipi_dphy/: dphy_dw.c  dphy_dw.h
drivers/mipi_dsi/: CMakeLists.txt  Kconfig  Kconfig.dw  dsi_dw.c  dsi_dw.h
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.alif  pinctrl_alif.c
drivers/power_domain/: CMakeLists.txt  Kconfig  power_domain_alif.c
drivers/pwm/: CMakeLists.txt  Kconfig  pwm_alif_utimer.c
drivers/sdhc/: CMakeLists.txt  Kconfig  Kconfig.dwc  Kconfig.intel  intel_emmc_host.c  sdhc_dwc.c  sdhc_dwc.h
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/serial/: Kconfig.ns16550  uart_ns16550.c
drivers/spi/: Kconfig.dw  spi_dw.c  spi_dw.h  spi_dw_regs.h
drivers/timer/: cortex_m_systick.c
drivers/video/: CMakeLists.txt  Kconfig  Kconfig.alif  Kconfig.dw  Kconfig.isp_vsi  Kconfig.jpeg_hantro_vc9000e  Kconfig.mt9m114  Kconfig.ov5675  arx3a0.c  isp_pico.c  isp_pico.h  jpeg_hantro_vc9000e.c  jpeg_hantro_vc9000e_regs.h  mt9m114.c  ov5640.c  ov5675.c  video_alif.c  video_alif.h  video_csi_dw.c  video_csi_dw.h
drivers/watchdog/: wdt_cmsdk_apb.c
dts/bindings/: vendor-prefixes.txt
modules/: Kconfig  Kconfig.alif
modules/hal_ethos_u/: CMakeLists.txt
modules/hal_infineon/: CMakeLists.txt
snippets/alif-blinky-pwm/: ensemble_rtss_he.overlay  ensemble_rtss_hp.overlay  snippet.yml
snippets/alif-fade-led/: b1_e1c_rtss_he.overlay  ensemble_rtss_he.overlay  ensemble_rtss_hp.overlay  snippet.yml
snippets/alif-lfs-mram/: README.rst  alif-lfs-mram.conf  snippet.yml  (+3 more)
soc/alif/balletto/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml
soc/alif/balletto/b1/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig.ab1c1f1m41820hh0_rtss_he  Kconfig.defconfig.ab1c1f1m41820ph0_rtss_he  Kconfig.defconfig.ab1c1f4m51820hh0_rtss_he  Kconfig.defconfig.ab1c1f4m51820hh_m55_he  Kconfig.defconfig.ab1c1f4m51820ph0_rtss_he  Kconfig.soc  soc.h
soc/alif/balletto/common/: Kconfig  alif_ns.ld  linker.ld  mpu_regions.c  soc_common.c  soc_common.h
soc/alif/ensemble/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml
soc/alif/ensemble/common/: Kconfig  alif_ns.ld  linker.ld  linker_a.ld  mmu_regions.c  mpu_regions.c  pinctrl_soc.h  soc_common.c  soc_common.h  soc_ensemble_common.S  sram.ld  startup.S  vector_table.c
soc/alif/ensemble/e1c/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig.ae1c1f4051920hh_rtss_he  Kconfig.soc  soc_e1c.c
soc/alif/ensemble/e3/: Kconfig  Kconfig.defconfig  Kconfig.defconfig.ae302f80f55d5xx_rtss_he  Kconfig.defconfig.ae302f80f55d5xx_rtss_hp  Kconfig.soc
soc/alif/ensemble/e4/: Kconfig  Kconfig.defconfig  Kconfig.defconfig.ae822fa0e5597xx0_rtss_he  Kconfig.defconfig.ae822fa0e5597xx0_rtss_hp  Kconfig.soc
soc/alif/ensemble/e7/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig.ae722f80f55d5xx_apss  Kconfig.defconfig.ae722f80f55d5xx_m55_he  Kconfig.defconfig.ae722f80f55d5xx_m55_hp  Kconfig.defconfig.ae722f80f55d5xx_rtss_he  Kconfig.defconfig.ae722f80f55d5xx_rtss_hp  Kconfig.soc  linker.ld  soc.c  soc.h
soc/alif/ensemble/e8/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig.ae822fa0e5597xx0_apss  Kconfig.defconfig.ae822fa0e5597xx0_rtss_he  Kconfig.defconfig.ae822fa0e5597xx0_rtss_hp  Kconfig.soc  soc.h
(+400 files in other folders)
